syntax = "proto3";

package awakari.api.permits;

option go_package = "api/grpc/permits";

import "google/protobuf/timestamp.proto";
import "api/grpc/subject/subject.proto";

service Service {
  rpc GetUsage(GetUsageRequest) returns (GetUsageResponse);
}

message GetUsageRequest {
  subject.Subject subj = 1;
}

message GetUsageResponse {
  int64 count = 1;
  int64 countTotal = 2;
  google.protobuf.Timestamp since = 3;
}
